--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT = 3001
 DB_USER = postgres
 DB_PASSWORD = 1234
 DB_HOST = postgres
-DB_DATABASE = vukaka_baba228
+DB_DATABASE = computer_shop
 APP_SECRET = asdase931sdasdak239591dsadas
 APP_URL= http://127.0.0.1
 PG_ADMIN=postgres@postgres.com
