--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./:/home/app
     working_dir: /home/app
-    command: sh -c "npm install  && npm start"
+    # command: sh -c "npm install  && npm start"
     container_name: animal_blog_node
     ports:
       - '3001:3000'
