--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "yasha",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
