--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session-sequelize": "^2.3.0",
     "express-validation": "^4.1.0",
     "express-validator": "^6.14.2",
+    "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
