--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "pet project",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/mocha/bin/mocha.js --timeout 2000",
     "start": "nodemon app.js"
   },
   "author": "yasha",
@@ -31,5 +31,9 @@
     "pg": "^8.8.0",
     "sequelize": "^6.28.0",
     "sequelize-cli": "^6.6.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0"
   }
 }
